Fixed horizontal radio button layout spacing

--- a/wwwroot/web-components/persistent-object-attribute/attributes/persistent-object-attribute-drop-down/persistent-object-attribute-drop-down.scss
+++ b/wwwroot/web-components/persistent-object-attribute/attributes/persistent-object-attribute-drop-down/persistent-object-attribute-drop-down.scss
@@ -17,6 +17,7 @@
         &[orientation="horizontal"] {
             @include layout-horizontal();
             @include layout-wrap();
+            gap: var(--theme-h4);
         }
     }
 }
